# -salesforce-securedsoql-agent

./: .env.example  .gitignore  BUSINESS_USER_GUIDE.md  DESIGN.md  DESIGN_RAG.md  DESIGN_RAG_OM.md  DESIGN_RAG_v2_3.md  MCP_GUIDE.md  README.md  pyproject.toml
src/app/: __init__.py  agent_service.py  config.py  main.py  mcp_server.py
src/app/api/: routes.py
src/app/graph/: __init__.py  builder.py  state.py
src/app/graph/nodes/: approval.py  business_context.py  intent.py  normalize.py  planning.py  query_execute.py  recovery.py  resolve_account.py  respond.py  schema.py  soql_builder.py  write_execute.py  write_validate.py
src/app/models/: requests.py  responses.py
src/app/services/: account_plan.py  business_guide.py  contracts.py  entity_resolution.py  llm.py  mcp_transport.py  salesforce_tools.py  summary.py
src/app/utils/: salesforce_ids.py  security.py
tests/: test_account_plan_validation.py  test_agent_service.py  test_business_guided_mode.py  test_contact_opportunity.py  test_draft_memory.py  test_entity_resolution.py  test_error_classification.py  test_expanded_draft_sections.py  test_field_filter_detection.py  test_graph_routing.py  test_mcp_server.py  test_mcp_transport.py
