[project]
name = "salesforce-securedsoql-agent"
version = "0.1.0"
description = "LangGraph agent for a Salesforce SecuredSOQL MCP server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.2",
  "langchain==1.2.15",
  "langchain-core==1.2.29",
  "langchain-openai==1.1.13",
  "langchain-google-genai==4.2.2",
  "langchain-mcp-adapters==0.1.9",
  "langgraph==1.1.6",
  "mcp",
  "pydantic==2.13.1",
  "python-dotenv==1.2.2",
  "uvicorn==0.43.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
